Fixed visual bug on smaller screens
Visual bug addressed where the url actions do not all properly
show up when rendering on smaller screens.

--- a/src/components/UrlList/styles.scss
+++ b/src/components/UrlList/styles.scss
@@ -47,7 +47,7 @@
 
   .url-text {
     color: var(--text);
-    max-width: 75%;
+    max-width: 60%;
     display: flex;
     flex-direction: column;
 
@@ -99,5 +99,26 @@
     .success {
       color: var(--success);
     }
+  }
+}
+
+@media (max-width: 600px) {
+  .url-list li {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+    
+    &.entering {
+      max-height: 100px;
+    }
+  }
+
+  .url-list .url-text {
+    max-width: 100%;
+  }
+
+  .url-list .url-actions {
+    flex-direction: row;
+    width: 100%;
   }
 }
